base/asa-server/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: asa-server
  namespace: asa-server
  labels:
    app.kubernetes.io/instance: asa-server
spec:
  replicas: 1
  serviceName: asa-server
  selector:
    matchLabels:
      app.kubernetes.io/name: asa-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: asa-server
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        kubernetes.io/hostname: sv01
      containers:
      - name: asa-server
        image: docker.io/acekorneya/asa_server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 7777
          name: game
          protocol: TCP
          hostPort: 7777
        - containerPort: 7777
          name: game-udp
          protocol: UDP
          hostPort: 7777
        - containerPort: 27020
          name: rcon
          protocol: TCP
          hostPort: 27020
        resources:
          requests:
            cpu: 500m
            memory: 8Gi
          limits:
            cpu: "4"
            memory: 16Gi
        securityContext:
          privileged: true
        volumeMounts:
        - name: data
          mountPath: /usr/games/.wine/drive_c/POK/Steam/steamapps/common
        - name: steam-temp
          mountPath: /usr/games/.wine/drive_c/POK/Steam/steamapps/downloading
        - name: steam-temp
          mountPath: /usr/games/.wine/drive_c/POK/Steam/steamapps/temp
        startupProbe:
          exec:
            command:
            - pgrep
            - -f
            - ArkAscended
          periodSeconds: 10
          failureThreshold: 180
        livenessProbe:
          exec:
            command:
            - pgrep
            - -f
            - ArkAscended
          periodSeconds: 60
          failureThreshold: 3
          initialDelaySeconds: 300
        readinessProbe:
          exec:
            command:
            - pgrep
            - -f
            - ArkAscended
          periodSeconds: 30
          failureThreshold: 5
          initialDelaySeconds: 300
      volumes:
      - name: data
        hostPath:
          path: /opt/asa-server-data
          type: DirectoryOrCreate
      - name: steam-temp
        emptyDir:
          sizeLimit: 20Gi
