base/asa-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asa-server
  namespace: asa-server
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: asa-server
  ports:
  - name: game-tcp
    port: 7777
    targetPort: 7777
    protocol: TCP
    nodePort: 30777
  - name: game-udp
    port: 7777
    targetPort: 7777
    protocol: UDP
    nodePort: 30777
  - name: rcon
    port: 27020
    targetPort: 27020
    protocol: TCP
    nodePort: 30020
